--- a/config/config-dev.yaml
+++ b/config/config-dev.yaml
@@ -1,5 +1,7 @@
 db:
   path: "./"
 telegram:
-  token: "6377317651:AAFCdjdgD72f1GYV4VAom7fR9iz9VMn-Iog"
-  user_id: "954296104"
+  token: ""
+  user_id: ""
+api:
+  url: "https://api.hh.ru/vacancies"
